Gitea/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:

      containers:
        - name: gitea
          image: gitea/gitea:latest
          ports:
            - containerPort: 3000
