Gitea/service.yml
apiVersion: v1
kind: Service
metadata:
  name: 
  namespace: gitea-ns
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster 
  selector:
    app: gitea
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
