Gitea/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: gitea-ns
spec:
  ingressClassName: nginx
  rules:
  - host: gitea.shrouk.com # add this domain to /etc/hosts (if you don't have a domian) with ingress load balancer external ip
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitea-svc
            port:
              number: 8000
